fix: spacing between inputs

--- a/styles.css
+++ b/styles.css
@@ -24,10 +24,6 @@ body {
 
 }
 
-.spaceLine {
-    height: 10px;
-}
-
 .inputForm {
     padding: 1rem;
     background-color: #eeeeee;
@@ -35,6 +31,5 @@ body {
 }
 
 .inputSection {
-    align-items: center;
-    height: 2rem;
+    margin-bottom: 1rem;
 }
